docs/_grammar.txt
# Nest grammar rules

# Token types that are not symbols are uppercase and defined at the start of the
# file.
# Symbols are between two apostrophes (').
# A rule is a lowercase name separated by hyphens followed by a colon and the
# tokens that need to be matched.
# TOK -> match TOK
# TOK1 | TOK2 -> match TOK1 or TOK2
# [TOK] -> match TOK but do not consume it, can contain multiple tokens
# TOK* -> match zero or more of TOK
# TOK+ -> match one or more of TOK
# TOK? -> match zero or one of TOK
# (TOK1 TOK2) -> token group or change operator precedence

EOF = end of file
IDENT = identifier
LF = line feed
VALUE = a number or string literal

statement: ('[' long-statement ']')
         | while-loop
         | do-while-loop
         | for-loop
         | for-as-loop
         | func-def
         | try-catch-statement
         | switch-statement
         | ('=>' expr)
         | '..'
         | ';'
         | expr
         | LF

long_statement: statement* [']' | EOF]

while-loop: '?..' LF* expr LF* '[' long-statement ']'

do-while-loop: '..?' LF* expr LF* '[' long-statement ']'

for-loop: '...' LF* expr LF* '[' long-statement ']'

for-as-loop: '...' LF* expr ':=' IDENT LF* '[' long-statement ']'

func-def: '#' LF* (IDENT LF*)+ '[' long-statement ']'

try-catch-statement: '??' LF* statement LF* '?!' LF* IDENT LF* statement

switch-statement: '|>' LF* expr LF* '['

expr: (((extraction+ (stack-op | (local-stack-op extraction))+)+ | extraction)
        ['[' | ')'  | ']' | '}' | '}>' | '?' | ':=' | LF | ',' | ':' | '?!' | EOF ])
    | if-expr
    | assignment

if-expr: expr '?' LF* statement (LF* ':' LF* statement)

assignment: expr assignment-tok (atom ('.' atom)+ | IDENT)

extraction: atom ('.' atom)*

atom: (local-op extraction)
    | ('@' extraction) # this only matches if it is the first atom of the expression
    | ('(' expr ')')
    | VALUE
    | lambda
    | vector-literal
    | array-literal
    | map-literal

lambda: '##' LF* (IDENT LF*)+ '=>' expr

vector-literal: ('<{' LF* (expr (LF* ',' LF* expr)* )* LF* '}>')
              | ('<{' LF* expr ';' LF* expr LF* '}>')

array-literal: '{' LF* (expr (LF* ',' LF* expr)* )+ LF* '}'
              | ('{' LF* expr ';' LF* expr LF* '}')

map-literal: '{' LF* (expr LF* ':' LF* expr (LF* ',' LF* expr LF* ':' LF* expr)* )* LF* '}'

stack-op: '+' | '-'  | '*'  | '/'  | '^' | '%'  | '><' | '&&' | '||' | '&|' | '&'
        | '|' | '^^' | '<<' | '>>' | '>' | '>=' | '<'  | '<=' | '==' | '!='

local-stack-op: '::' | '->' | '@' | '!!'

local-op: '$' | '!' | '~' | '>>>' | '<<<' | '-:' | '?::' | '@@' | '|#|'

assignment-tok: '+=' | '-='  | '*='  | '/=' | '^=' | '%=' | '><=' | '&=' |
                '|=' |'^^=' | '<<=' | '>>=' | '='
